<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo_elite"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Elite_Runners"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zapato1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="8dp"
                android:contentDescription="@string/descripcion_Aeroflex"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zapato2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="8dp"
                android:contentDescription="@string/descripcion_BlazeTech"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zapato3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="8dp"
                android:contentDescription="@string/descripcion_BreezeEase"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zapato4"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="8dp"
                android:contentDescription="@string/descripcion_SkyHigh"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zapato5"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="8dp"
                android:contentDescription="@string/descripcion_SkyWalker"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zapato6"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="8dp"
                android:contentDescription="@string/descripcion_StylePro"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zapato7"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="8dp"
                android:contentDescription="@string/descripcion_SunBeam"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zapato8"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="8dp"
                android:contentDescription="@string/descripcion_UrbanFlex"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zapato9"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="8dp"
                android:contentDescription="@string/descripcion_Xcelerator"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zapato10"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:padding="8dp"
                android:contentDescription="@string/descripcion_AirStrike"/>

        </GridLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cerrar Sesión"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
